--- a/README
+++ b/README
@@ -1,4 +1,17 @@
+Make sure the packages in requirements.txt are installed before running
+
 To run pacman interactively with keyboard:
 python3 pacman.py --layout <nameofmap>
 FOr example:
 python3 pacman.py --layout smallClassic
+
+To test the MCTS Agent, run: 
+python3 pacman.py --layout <nameofmap> -p MCTSAgent -g <GhostType> --quietTextGraphics --numGames <numGames> --maxDuration <maxDuration> -a timelimit=timelimit
+1. layout: bigClassic, mediumClassic, smallClassic, smallClassicLittleFood
+2. GhostType: RandomGhost or DirectionalGhost (Note the DirectionalGhost is a greedyghost that chases Pacman)
+4. the --quietTextGraphics flag is passed in to avoid any graphics
+5. If both maxDuration and numgames are passed in, the code will terminate whichever limit is hit first. maxDuration is amount of time in minutes.
+5. -a passes in a time limit in seconds for the MCTS Agent for each action. The default is 0.35 seconds
+Example: 
+python3 pacman.py --layout smallClassic -p MCTSAgent -g DirectionalGhost --quietTextGraphics --numGames 10 --maxDuration 4 -a timelimit=0.2
+will run the game for either 4 minutes or 10 games and output stats whichever is hit first, where our MCTS agent has 0.2 seconds per move.
