--- a/README
+++ b/README
@@ -15,3 +15,15 @@ python3 pacman.py --layout <nameofmap> -p MCTSAgent -g <GhostType> --quietTextGr
 Example: 
 python3 pacman.py --layout smallClassic -p MCTSAgent -g DirectionalGhost --quietTextGraphics --numGames 20 --maxDuration 5 -a timelimit=0.05
 will run the game for either 6 minutes or 20 games and output stats whichever is hit first, where our MCTS agent has 0.05 seconds per move.
+
+**Neural Network Agent**
+To train the Neural Network, run:
+`python3 neuralNetworkAgent.py`
+This will train the NN for whatever number of generations specified by the code (right now n=100), but if you switch the else statement of the __main__ function
+with what is commented out, it will run for a certain amount of time (default = 4 hours).
+
+To run the best Neural Network you have saved (a default is already loaded in in winner.pkl), run
+`python3 neuralNetworkAgent.py -best`
+
+To test the Neural Network agent and return the mean & variance over a disclosed amount of time (right now 4 hours), run
+`python3 neuralNetworkAgent.py -test`
